--- a/css/main.css
+++ b/css/main.css
@@ -1,43 +1,60 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-     font-family: "Inter", sans-serif;
+    font-family: "Inter", sans-serif;
 }
-.container{
+
+.container {
     width: 1200px;
     margin: 0 auto;
 }
-header{
+
+header {
     background-color: #F5F7FA;
     margin-bottom: 40px;
 }
-nav .container{
+
+nav .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 20px;
     margin-bottom: 70px;
 }
-nav .nav_info{
+
+nav .nav_info {
     display: flex;
     align-items: center;
     gap: 20px;
 }
-nav .nav_info li{
+
+nav .nav_info li {
     list-style: none;
     color: #18191F;
     font-size: 16px;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
 }
-nav .nav_info li:hover{
+
+nav .nav_info li:hover {
     border-bottom: 2px solid #4CAF4F;
     transform: scale(1.2);
 }
- .btn{
+
+nav .nav_logo img {
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+}
+
+nav .nav_logo img:hover {
+    transform: translateX(40px) scale(1.2);
+
+}
+
+.btn {
     padding: 10px 20px;
     color: #4CAF4F;
     background-color: transparent;
@@ -47,90 +64,397 @@ nav .nav_info li:hover{
     cursor: pointer;
     gap: 10px;
 }
- .btn:hover{
+
+.btn:hover {
     background-color: #4CAF4F;
     color: white;
 }
-.hero .container{
+
+.hero .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 20px;
 }
-.hero .hero_info h1{
+
+.hero .hero_info h1 {
     font-size: 64px;
     color: #4D4D4D;
     margin-bottom: 10px;
 }
-.hero .hero_info span{
+
+.hero .hero_info span {
     color: #4CAF4F;
 }
-.hero .hero_info p{
+
+.hero .hero_info p {
     color: #717171;
     font-size: 16px;
     margin-bottom: 40px;
 }
-.hero .hero_img{
-    margin-bottom: 60px; 
+
+.hero .hero_img {
+    margin-bottom: 60px;
 }
-.hero .dot{
+
+.hero .hero_img img {
+    transition: all 0.3s ease-in-out;
+}
+
+.hero .hero_img img:hover {
+    transform:
+     scale(1.2);
+}
+
+.hero .dot {
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 30px;
 }
-.title{
+
+.title {
     text-align: center;
     margin-bottom: 50px;
 }
-.title h1{
+
+.title h1 {
     font-size: 36px;
     color: #4D4D4D;
     margin-bottom: 20px;
+    transition: all 0.3s ease-in-out;
 }
-.title p{
+
+.title h1:hover {
+    border-bottom: 5px solid #4CAF4F;
+    transform: scale(1.2);
+}
+
+.title p {
     color: #717171;
     font-size: 16px;
 }
-.pictures{
+
+.pictures {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 60px;
 }
-.card{
+
+.pictures img {
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+}
+
+.pictures img:hover {
+    transform: scale(1.2);
+}
+
+.card {
     width: 350px;
     text-align: center;
     padding: 20px;
 }
-.cards{
+
+.cards {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 50px;
     margin-bottom: 60px;
 }
-.cards .card h1{
+
+.cards .card h1 {
     color: #4D4D4D;
     font-size: 28px;
     margin-bottom: 15px;
 }
-.section2 .section_info{
+
+.section2 .section_info {
     width: 800px;
 }
-.section2 .imgs{
+
+.section2 .imgs {
     padding: 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.section2 .imgs h1{
+
+.section2 .imgs h1 {
     font-size: 36px;
     color: #4D4D4D;
 }
-.section2 .imgs p{
+
+.section2 .card img {
+    transition: all 0.3s ease-in-out;
+}
+
+.section2 .card img:hover {
+    transform: scale(1.2);
+}
+
+.section2 .imgs p {
     color: #717171;
     font-size: 14px;
     margin-bottom: 20px;
 }
 
+.section3 {
+    background-color: #F5F7FA;
+}
+
+.section3 .icons {
+    display: flex;
+    align-items: first baseline;
+    justify-content: space-between;
+    gap: 50px;
+}
+
+.section3 .section3_title {
+    display: flex;
+    gap: 40px;
+    align-items: center;
+    padding: 40px;
+}
+
+.section3 .numbers {
+    padding-top: 20px;
+}
+
+.section3 .number {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 40px;
+}
+
+.section3_info h1 {
+    font-size: 36px;
+    margin-bottom: 10px;
+    color: #4D4D4D;
+    margin-bottom: 15px;
+}
+
+.section3_info span {
+    color: #4CAF4F;
+}
+
+.section3 .number h2 {
+    color: #4D4D4D;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+.section3 .number h2:hover{
+    border-bottom: 3px solid #4CAF4F;
+    transform: scale(1.1);
+}
+
+.section3 .number p {
+    color: #717171;
+}
+.section3 .number img{
+    transition: all 0.3s ease-in-out;
+}
+.section3 .number img:hover{
+    transform: scale(1.2);
+}
+
+.section4 .container {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+}
+
+.section4 .section_info {
+    width: 610px;
+    padding: 20px;
+}
+
+.section4 .section_info h1 {
+    font-size: 36px;
+    color: #4D4D4D;
+    margin-bottom: 15px;
+}
+
+.section4 .section_info p {
+    color: #717171;
+    font-size: 14px;
+    margin-bottom: 20px;
+}
+
+.section5 {
+    background-color: #F5F7FA;
+}
+
+.section5 .container {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    padding: 20px;
+    margin-bottom: 30px;
+}
+
+.section5 .section_info p {
+    color: #717171;
+    font-size: 16px;
+    margin-bottom: 20px;
+    width: 730px;
+}
+
+.section5 .section_info h2 {
+    color: #4CAF4F;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+.section5 .section_info h4 {
+    color: #89939E;
+    font-size: 16px;
+    margin-bottom: 30px;
+}
+
+.section5 .icons {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.block {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 150px;
+}
+
+.box {
+    position: relative;
+}
+
+.words {
+    padding: 20px;
+    background-color: #F5F7FA;
+    width: 300px;
+    text-align: center;
+    position: absolute;
+    top: 70%;
+    left: 30px;
+    box-shadow: 0px 0px 10px 0px rgb(70, 70, 70);
+    border-radius: 10px;
+    transition: all 0.3s ease-in-out;
+}
+
+.words h4 {
+    margin-bottom: 20px;
+}
+
+.words:hover {
+    box-shadow: 0px 0px 10px 0px #4CAF4F;
+    transform: scale(1.1);
+}
+
+.section7 .container h1 {
+    font-size: 64px;
+    color: #263238;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.section7 {
+    background-color: #F5F7FA;
+    padding: 30px;
+}
+
+.section7 .container .btns {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.section7 .container button {
+    padding: 10px 50px;
+    background-color: transparent;
+    border: none;
+    color: #4CAF4F;
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+}
+
+.section7 .container button:hover {
+    background-color: #4CAF4F;
+    border-radius: 10px;
+    color: white;
+}
+
+.block1 {
+    display: flex;
+    align-items: start;
+    justify-content: space-between;
+}
+
+footer {
+    background-color: #263238;
+    color: white;
+    padding: 20px;
+
+}
+
+footer .container {
+    padding: 20px;
+}
+
+footer .ikon {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+footer .ikon i {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    background-color: #2f383d;
+}
+
+footer img {
+    margin-bottom: 20px;
+    color: white;
+}
+
+footer .carts h3 {
+    margin-bottom: 20px;
+    font-size: 14px;
+    color: #F5F7FA;
+    font-weight: 300;
+}
+
+footer .carts h2 {
+    font-size: 20px;
+    margin-bottom: 20px;
+    font-weight: 400;
+}
+
+footer .carts h4 {
+    font-size: 14px;
+    color: #F5F7FA;
+    font-weight: 300;
+    margin-bottom: 10px;
+}
+
+footer input {
+    padding: 9px 30px;
+    background-color: #3e4549;
+    color: rgb(179, 177, 177);
+    border: none;
+    border-radius: 10px;
+}
+
+footer .carts h1 {
+    margin-bottom: 30px;
+    font-size: 20px;
+    font-weight: 400;
+}
